2007-09-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the test suite.
	* src/object/object-test-primitives.cc: Adjust to match the new
	prototypes (pass a NULL context to float_class_mul and
	float_class_add).
	* tests-local.mk (XFAIL_TESTS): Adjust (sort and add
	parse-errors.chk since a k2-specific version of this test will be
	added).

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Don't yield for Scope
	* src/runner/runner.cc (YIELD): Take no arg, it is very misleading:
	it looks like we yield a result.
	(Scope): Don't yield here, we do nothing.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Fix scopes handling
	* src/ast/ast.yml: Implement default visitor.
	* src/runner/runner.cc: Fix Scope processing.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Start scopes implementation
	* src/ast/ast.yml (Scope): New.
	* src/parser/bison/ugrammar.y: Support it.
	* src/runner/runner.hh, src/runner/runner.hxx,
	* src/runner/runner.cc: Ditto.
	(locals_): New.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	k2-check
	* tests-local.mk (K2_TESTS, k2-check): New.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Let primitives access the context
	* src/object/fwd.hh (primitive_type): Takes an rContext
	as 1st arg.
	* src/object/code-class.cc, src/object/float-class.cc,
	* src/object/float-class.hh, src/object/list-class.cc,
	* src/object/list-class.hh, src/object/object-class.cc,
	* src/object/primitive-class.hh, src/object/primitives.hh,
	* src/runner/runner.cc:
	Adjust.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Use Boost PP
	* src/runner/runner.hh: To factor op() declarations.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Disable "def" instead of "var"
	* src/parser/bison/ugrammar.y: here.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Fix Bison use
	Apparently I didn't know that <TYPE> anotations
	were applied to all the following tokens...
	* src/parser/bison/ugrammar.y: Fix <types>.
	Factor them.
