@@ -8,6 +8,7 @@
 
 # include "kernel/fwd.hh"
 # include "libport/ufloat.h"
+# include "libport/select-ref.hh"
 # include "object/object.hh"
 # include "object/state.hh"
 
@@ -40,8 +41,9 @@ namespace object
 
     /// The value held.
     const typename Traits::type value_get () const;
-    /// The value held.
-    typename Traits::type value_get ();
+
+    /// The held value.
+    typename libport::ref_traits<typename Traits::type>::type value_get ();
 
     /// For debugging.
     std::ostream& special_slots_dump (std::ostream& o) const;
